# n64emu-SDL2GyroInjector

./: 1964-plugin-joyshock.files  1964-plugin-joyshock.includes  1964_plugin.cpp  1964_plugin.h  CMakeLists.txt  GenerateVersionHeader.cmake  README.md  common.h  inj_version.h.in  maindll.cpp  maindll.h  plugin.h  vec2.h  version.LICENSE
cmake/: windeployqt.cmake
common/: Helpers.cpp  Helpers.h  common.cpp  common.h  vec2.h  vec3.h
game/: EmulatorLink.cpp  EmulatorLink.h  Game.cpp  Game.h  GameDriver.cpp  GameDriver.h  Goldeneye.cpp  Goldeneye.h  PerfectDark.cpp  PerfectDark.cpp.bak  PerfectDark.h
game/driver/: GameDriver.h  Goldeneye.cpp  Goldeneye.h  GoldeneyeOriginalCode.txt  PerfectDark.cpp  PerfectDark.cpp.bak  PerfectDark.h
input/: InputClasses.cpp  InputClasses.h  InputHandler.cpp  InputHandler.h  JoyShockDriver.cpp  JoyShockDriver.h  SDLDevice.cpp  SDLDevice.h  SdlDriver.cpp  SdlDriver.h
input/GamepadMotion/: GamepadMotion.cpp  GamepadMotion.hpp
res/: JoyShockLibrary.lib  SDL2.lib  SDL2main.lib
settings/: Settings.cpp  Settings.h
ui/: 1964_config.ui  CallbackWrapper.h  ConfigDialog.cpp  ConfigDialog.h  MappingButton.cpp  MappingButton.h  pluginui.cpp  pluginui.h  resource.h  ui.rc
